==> Zalmotek/renesas-RA8M1-feather/RA8M1-Tutorials/1-inputs/RA8M1_Feather_Inputs_SHARP/src/hal_entry.cpp <==
#include "hal_data.h"
#include "adc.h"
#include <iomanip>

FSP_CPP_HEADER
void R_BSP_WarmStart(bsp_warm_start_event_t event);
FSP_CPP_FOOTER

#define d5 (BSP_IO_PORT_04_PIN_07)
#define d6 (BSP_IO_PORT_04_PIN_14)
#define d9 (BSP_IO_PORT_04_PIN_15)
#define d10 (BSP_IO_PORT_01_PIN_12)
#define d12 (BSP_IO_PORT_01_PIN_13)
#define d13 (BSP_IO_PORT_01_PIN_14)
#define d14 (BSP_IO_PORT_00_PIN_00)

void delay(int t);
void delay(int t) {
    R_BSP_SoftwareDelay(t, BSP_DELAY_UNITS_MILLISECONDS);
}

/*******************************************************************************************************************//**
 * main() is generated by the RA Configuration editor and is used to generate threads if an RTOS is used.  This function
 * is called by main() when no RTOS is used.
 **********************************************************************************************************************/
void hal_entry(void)
{
    R_IOPORT_PinWrite(&g_ioport_ctrl, d5, BSP_IO_LEVEL_HIGH);
    R_IOPORT_PinWrite(&g_ioport_ctrl, d6, BSP_IO_LEVEL_HIGH);
    R_IOPORT_PinWrite(&g_ioport_ctrl, d9, BSP_IO_LEVEL_HIGH);
    R_IOPORT_PinWrite(&g_ioport_ctrl, d10, BSP_IO_LEVEL_HIGH);
    R_IOPORT_PinWrite(&g_ioport_ctrl, d12, BSP_IO_LEVEL_HIGH);
    R_IOPORT_PinWrite(&g_ioport_ctrl, d13, BSP_IO_LEVEL_HIGH);
    R_IOPORT_PinWrite(&g_ioport_ctrl, d14, BSP_IO_LEVEL_HIGH);
    while (true) {
        delay(1000);
        APP_PRINT("It works!\n");
        double adc_volt;
        int adc_val = analogRead(0, &adc_volt);
        APP_PRINT("ADC0 raw val: "); APP_PRINT("%d\n",adc_val);
        double voltage = (adc_val * (3.3 / 4095.0));
        int distance = (27.86 * pow(voltage, -1.15));
        APP_PRINT("Distance: "); APP_PRINT("%d\n",distance);
        delay(500);
    }

#if BSP_TZ_SECURE_BUILD
    /* Enter non-secure code */
    R_BSP_NonSecureEnter();
#endif
}

/*******************************************************************************************************************//**
 * This function is called at various points during the startup process.  This implementation uses the event that is
 * called right before main() to set up the pins.
 *
 * @param[in]  event    Where at in the start up process the code is currently at
 **********************************************************************************************************************/
void R_BSP_WarmStart(bsp_warm_start_event_t event)
{
    if (BSP_WARM_START_RESET == event)
    {
#if BSP_FEATURE_FLASH_LP_VERSION != 0

        /* Enable reading from data flash. */
        R_FACI_LP->DFLCTL = 1U;

        /* Would normally have to wait tDSTOP(6us) for data flash recovery. Placing the enable here, before clock and
         * C runtime initialization, should negate the need for a delay since the initialization will typically take more than 6us. */
#endif
    }

    if (BSP_WARM_START_POST_C == event)
    {
        /* C runtime environment and system clocks are setup. */

        /* Configure pins. */
        R_IOPORT_Open (&g_ioport_ctrl, &IOPORT_CFG_NAME);
    }
}

#if BSP_TZ_SECURE_BUILD

FSP_CPP_HEADER
BSP_CMSE_NONSECURE_ENTRY void template_nonsecure_callable ();

/* Trustzone Secure Projects require at least one nonsecure callable function in order to build (Remove this if it is not required to build). */
BSP_CMSE_NONSECURE_ENTRY void template_nonsecure_callable ()
{

}
FSP_CPP_FOOTER

#endif
